[package]
name = "ktls-sys"
version = "1.0.2"
edition.workspace = true
rust-version = "1.75.0"
# === Publication info ===
authors.workspace = true
categories.workspace = true
description = """
FFI bindings for `linux/tls.h`
"""
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
