[package]
name = "ktls-test"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish = false

[dependencies]
bitflags = "2.9"
ktls = { path = "../ktls", features = ["raw-api", "tracing", "probe-ktls-compatibility"] }
ktls-util = { path = "../ktls-util" }
nix = "0.30.1"
rand = "0.9.2"
rcgen = { version = "0.14.3" }
rustls = { version = "0.23.27", default-features = false, features = ["std", "ring"] }
tokio = { version = "1.40", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "parking_lot"] }

[dev-dependencies]
test-case = "3.3.1"
