[package]
name = "ktls-util"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish = false               # Currently for test only

[dependencies]
