[package]
name = "ktls-util"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish = false               # Currently for test only

[dependencies]
ktls = { path = "../ktls", default-features = false }
rustls = { version = "0.23.27", default-features = false, features = ["std"] }
thiserror = "2.0.16"
tokio = { version = "1.40", features = ["io-util"] }

[features]
default = ["tls12", "ring"]

# Enable rustls TLS 1.2 support
tls12 = ["ktls/tls12", "rustls/tls12"]

# Enable rustls ring crypto backend
ring = ["rustls/ring"]

# Enable rustls aws-lc-rs crypto backend
aws-lc-rs = ["rustls/aws-lc-rs"]
