[package]
name = "ktls"
version = "6.0.2"
edition.workspace = true
rust-version.workspace = true
# === Publication info ===
authors.workspace = true
categories.workspace = true
description = """
Configures kTLS for tokio-rustls client and server connections.
"""
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
bitflags = "2.9"
libc = { version = "0.2.175", features = ["const-extern-fn"] }
log = { version = "0.4.27", optional = true }
memoffset = "0.9.1"
nix = { version = "0.30.1", features = ["socket", "uio", "net"] }
pin-project = "1.1"
rustls = { version = "0.23.31", default-features = false, features = ["std"] }
thiserror = "2.0"
tokio = { version = "1.40", optional = true }
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
ktls-util = { path = "../ktls-util", default-features = false, features = ["tls12", "ring"] }
rand = "0.9.2"
rcgen = { version = "0.14.3" }
rustls = { version = "0.23.27", default-features = false, features = ["std", "ring"] }
test-case = "3.3.1"
tokio = { version = "1.40", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "parking_lot"] }

[features]
default = ["tls12", "async-io-tokio", "probe-ktls-compatibility"]

# Enable rustls TLS 1.2 support
tls12 = ["rustls/tls12"]

# Expose some low-level APIs
raw-api = []

# Implements tokio's `AsyncRead` and `AsyncWrite` traits for `KtlsStream`
async-io-tokio = ["dep:tokio"]

# Logging support with `log` crate
log = ["dep:log"]

# Logging support with `tracing` crate
tracing = ["dep:tracing"]

# Probes for the compatibility of the current kernel with kTLS
probe-ktls-compatibility = []
