[package]
name = "ktls"
version = "6.0.2"
edition.workspace = true
rust-version.workspace = true
# === Publication info ===
authors.workspace = true
categories.workspace = true
description = """
Configures kTLS for tokio-rustls client and server connections.
"""
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
bitflags = "2.9"
libc = { version = "0.2.175", features = ["const-extern-fn"] }
log = { version = "0.4.27", optional = true }
memoffset = "0.9.1"
nix = { version = "0.30.1", features = ["socket", "uio", "net"] }
pin-project = "1.1"
rustls = { version = "0.23.31", default-features = false, features = ["std"] }
thiserror = "2.0"
tokio = { version = "1.40", optional = true }
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
lazy_static = "1.5.0"
oorandom = "11.1.4"
rcgen = "0.13.1"
socket2 = "0.5.7"
test-case = "3.3.1"
tokio = { version = "1.39.2", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["tls12", "async-io-tokio", "probe-ktls-compatibility"]

# Enable rustls TLS 1.2 support
tls12 = ["rustls/tls12"]

# Expose some low-level APIs
raw-api = []

# Implements tokio's `AsyncRead` and `AsyncWrite` traits for `KtlsStream`
async-io-tokio = ["dep:tokio"]

# Logging support with `log` crate
log = ["dep:log"]

# Logging support with `tracing` crate
tracing = ["dep:tracing"]

# Probes for the compatibility of the current kernel with kTLS
probe-ktls-compatibility = []
