[package]
name = "ktls"
version = "6.0.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = """
Configures kTLS for tokio-rustls client and server connections.
"""
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
futures-util = "0.3.30"
ktls-sys = "1.0.1"
libc = { version = "0.2.175", features = ["const-extern-fn"] }
memoffset = "0.9.1"
nix = { version = "0.30.1", features = ["socket", "uio", "net"] }
num_enum = "0.7.3"
pin-project-lite = "0.2.14"
rustls = { version = "0.23.12", default-features = false }
smallvec = "1.13.2"
thiserror = "2"
tokio = { version = "1.39.2", features = ["net", "macros", "io-util"] }
tokio-rustls = { default-features = false, version = "0.26.0" }
tracing = "0.1.40"

[dev-dependencies]
lazy_static = "1.5.0"
oorandom = "11.1.4"
rcgen = "0.13.1"
socket2 = "0.5.7"
test-case = "3.3.1"
tokio = { version = "1.39.2", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["aws_lc_rs", "tls12"]
aws_lc_rs = ["rustls/aws_lc_rs", "tokio-rustls/aws_lc_rs"]
aws-lc-rs = ["aws_lc_rs"]                                  # Alias because Cargo features commonly use `-`
ring = ["rustls/ring", "tokio-rustls/ring"]
tls12 = ["rustls/tls12", "tokio-rustls/tls12"]
